	* graphics/nxsu/nx_releasebkgd.c: Fix a bad cast that was causing
	  problems with the background window was released.
	* fs/nxffs/nxffs_pack.c:  Correct a critical bug in the NXFFS file system:
	  When repacking the filesystem, there was a missing check to see if an
	  inode structure would fit at the end of a block.  This is a rare case
	  if the block size is large, but can be common for tiny block sizes
	  and results in a crash and file system corruption.
	* fs/nxffs/nxffs_initialize.c:  Fix an initialize error.  If the FLASH
	  is full on power-up, NXFFS will fail to initialize correctly.
	* fs/nxffs/nxffs_write.c and nxffs_pack.c:  Fix an error that can occur
	  when attempt to write to FLASH volume that is completely full but
	  has no value inodes on it.
	* drivers/mtd/at24xx.c:  Now supports a configurable block size that
	  supports using "clusters" of AT24 pages as blocks.  This allows bigger
	  block sizes and more efficient use of EEPROM when the AT24 is used to
	  support a file system (such as NXFFS). (Contributed by Hal Glenn).
	* include/nuttx/rgbcolors.h: More fixes to RGB color conversion
	  macros.
	* arch/arm/src/common/up_createstack.c and up_usestack.c:  For ARM EABI
	  the stack must be aligned to 8-byte boundaries.  This is necessary for
	  passing aligned floating point values under EABI.  Fix contributed by
	  David Sidrane.
	* Numerous changes and fixes to the PIC32 interrupt handing logic. The
	  PIC32 port is almost complete but still not ready for prime time.

6.12 2011-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* fs/fat/fs_fat32util.c and fs_fat32.h: Logic extended to look in up to
	  four partitions for a valid FAT file system.
	* drivers/input/tsc2007.c: Add support for 8-bit conversions; make sure
	  that A/D converters are active before requesting conversions.
	* drivers/mmcsd0/mmcsd_sdio.c: Increase capacity variable from size_t
	  to uin64_t (if available) so that SD cards with capacities greater
	  than 4Gb can be supported.